jupyterhub/overlays/prod/jupyterhub-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: jupyterhub
spec:
    host: jupyterhub.datahub.redhat.com
    port:
        targetPort: 8080-tcp
    tls:
        certificate: ENC[AES256_GCM,data:rBc9gAY1WSx14KT7cz/VRxi1e4YyowONKmKWJZd0zjY0fmvqRpmu4lC3wbcd+S8S/j74IwVS+PLHZFXfzebmaqtczWDzW/GDM4iojHjTgCMMcvrFcM9GXFp2Y0XTHE/yKVZgL/dMo4yySf3Rb9ahDpDdy78b62GsZrm/Dtl/XeEPq92h/vzHb+hhFa2gz/fNofktoiSHHXnWbBf9rmLQTkPCuNbLIsEGp1kPyIOlMyJCS6vA3N91sO9x8zm6nbFr6ioPwORfIH9QAwMhC7WOp6RIa+03g8LgvVS00erKOhY7dz0KUl4eNqNhjwhOBrlT8DsSIH397eSDCaATfcYBIHB1wY7UUe0PO2V7NPSzn1KkVEsoSe20Jbfby+t5wnqN0yBdoCF3sTgbECOC37tK3SM/1OnCooLH+8ECwWT0Lwqjxqb+HqRwopZLAt9JysCvlpAO96WWIyA [...]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:7ddJjyRqZhY=,iv:dxH5G/GqbFVN1W61TiwEdpxK1nDYk9QZANQ4jVg2D5o=,tag:wTvpgw9nQFb0bblR0QivqA==,type:str]
        key: ENC[AES256_GCM,data:KOLrh+XhtIN9GPHVQTS9U3WZ+mPeF3CPH+/aUjBh3eHaqENZT+miPLfXCTOlvnHOH8yGTsYOgBWgkGPeF+YDGM36IQhbwUoTTQjfqw9tW0GN2SSfz9f3bCiUfKUNEn6NRVb11K1gdvI1na5ikoKukcGQovuV9qjDMVAyVwVhOprlkH+sQ7my/MY1lmVga8W4i7bIHHtD7w1I7bLVF9VczFLgqzjwm8XoQnp3+AH51kR/cc3TMdpq+N/ZPzxYuhmWcVa42TmzTAV5eZyO+BqNbd5qLKdtmK5UM0vpWUoizeEoPZuCiOYm77qGMz8JHxWBIqM9nPA9NxSQT4i5mmpiRqJ+mVDlShRG0V0B813KdRdKiSPHRprPADP7g2NNpRjEUcUA62bDb/gHiXu4k6lhhlEymO1oxUbr7DSDqMcubnytSE1GdZFg+hjDVV8WSLGKwOJr3zuYTadAY3o0W2D [...]
        termination: ENC[AES256_GCM,data:jMog2w==,iv:2qhYUPIxL7oTd3snA+mMxHEOlzE5efocy8NrkTMF0Wo=,tag:IvQEcbqd3AlA9l5szP6vEw==,type:str]
    to:
        kind: Service
        name: jupyterhub
        weight: 100
    wildcardPolicy: None
status:
    ingress: null
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-04-09T12:44:35Z'
    mac: ENC[AES256_GCM,data:PjHUm0ub8w5dMCoYDKavWfIGpXFBsc11RhNnbCdnaLyZ5MKpCjcCFxJ/DK5WKSXZGj8ll3kI2PQm7jQbCZUXF1Y90dqxjWAv55iP+zopTd4jmVIqFXMljzO9TYLarLgSJIKgy0ouP50PRKuA4mwCGPOqs33Bzag/hgZLrgu16hk=,iv:T5Nqh77ItGR04qRGrst4GrNyuV/U9lLdYbKxqKV1kzs=,tag:mmh5OpJJko7kqGp5CrX0rw==,type:str]
    pgp:
    -   created_at: '2021-04-09T12:44:35Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf9HX3TzPRlddRqslJfeamFglJsVMwROS54k0uWDssWbmRQ
[...]
            XbI4K6887CeMlMhKVI3n0w8fAZXQKNSEF6kufzs=
            =3ZZo
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
